@@ -1,6 +1,7 @@
 
 {{$NEXT}}
     * Support routes that use named-captures.
+    * Documented serializers configuration.
 
 0.09 2013-02-25
 
